improved the markdown comments

--- a/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
@@ -4,10 +4,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📊 Lung Cancer Data Analysis\n",
+    "# 🩺 Lung Cancer Risk Analysis & Prediction  \n",
     "\n",
-    "## 🔍 Objective:\n",
-    "This analysis explores factors related to **lung cancer**, examining how various features (age, gender, smoking, etc.) influence pulmonary disease.\n"
+    "## **📌 Project Overview**  \n",
+    "Lung cancer remains one of the leading causes of mortality worldwide, often diagnosed at later stages when treatment is less effective. This project aims to **analyze risk factors associated with pulmonary disease** and use **data-driven insights** to support **early detection and prevention efforts**.  \n",
+    "\n",
+    "Using **exploratory data analysis (EDA), statistical testing, and predictive modeling**, we will investigate how **age, gender, smoking, pollution exposure, and other factors** contribute to the likelihood of developing lung disease.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **🎯 Objectives of the Analysis**  \n",
+    "✔ **Understand Data Distribution:**  \n",
+    "- Analyze the prevalence of **pulmonary disease cases** across different demographic and lifestyle factors.  \n",
+    "- Detect **imbalances in the dataset** that may affect conclusions.  \n",
+    "\n",
+    "✔ **Identify Key Risk Factors:**  \n",
+    "- Determine whether variables like **smoking, pollution exposure, and stress levels** are statistically significant predictors.  \n",
+    "- Assess how **age and gender influence lung disease prevalence**.  \n",
+    "\n",
+    "✔ **Perform Statistical Tests:**  \n",
+    "- Use **Chi-Square Tests** to examine relationships between categorical variables (e.g., **smoking & lung disease**).  \n",
+    "- Apply **T-Tests and Mann-Whitney U Tests** to compare numerical variables between affected and non-affected individuals.  \n",
+    "\n",
+    "✔ **Visualize Trends & Patterns:**  \n",
+    "- Generate **heatmaps, bar charts, and correlation plots** to uncover meaningful patterns in the dataset.  \n",
+    "- Compare **disease proportions** between different groups to highlight disparities.  \n",
+    "\n",
+    "✔ **Prepare for Predictive Modeling:**  \n",
+    "- Convert categorical variables into **numerical format** for machine learning models.  \n",
+    "- Identify the most important **predictive features** using **correlation analysis & logistic regression**.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **📊 Dataset Information**  \n",
+    "The dataset consists of **demographic, lifestyle, and medical history factors** related to pulmonary disease, including:  \n",
+    "- **Age, Gender** (Demographics)  \n",
+    "- **Smoking Status, Alcohol Consumption, Stress Levels** (Lifestyle Factors)  \n",
+    "- **Exposure to Pollution, Immune Weakness, Long-Term Illness** (Environmental & Medical Conditions)  \n",
+    "- **Breathing Issues, Oxygen Saturation, Chest Tightness** (Symptoms)  \n",
+    "- **Pulmonary Disease Diagnosis (Yes/No)** (Target Variable)  \n",
+    "\n",
+    "We perform **data cleaning** to remove missing values, **categorize age into groups**, and **convert categorical features into numerical values** to ensure compatibility with statistical tests and machine learning models.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **🔍 Key Questions to Answer**  \n",
+    "✅ **How does smoking impact the likelihood of developing pulmonary disease?**  \n",
+    "✅ **Is there a significant difference in disease prevalence between males and females?**  \n",
+    "✅ **Are older individuals at higher risk compared to younger populations?**  \n",
+    "✅ **Which factors (e.g., pollution, stress, oxygen saturation) are the strongest predictors of pulmonary disease?**  \n",
+    "✅ **Can we use statistical tests to confirm relationships between key variables?**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **📌 Next Steps**  \n",
+    "1️⃣ **Perform Exploratory Data Analysis (EDA)** → Identify trends, distributions, and anomalies.  \n",
+    "2️⃣ **Conduct Statistical Testing** → Validate significant risk factors with hypothesis testing.  \n",
+    "3️⃣ **Build Predictive Models** → Use Logistic Regression and other ML techniques for risk assessment.  \n",
+    "4️⃣ **Summarize Findings & Insights** → Provide actionable recommendations for early detection.  \n",
+    "\n",
+    "This project aims to provide **data-driven insights into lung cancer risk factors** that could help in **prevention, screening, and early diagnosis** efforts. 🚀  \n",
+    "\n"
    ]
   },
   {
@@ -29,10 +86,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Import and Load the Dataset**\n",
-    "### ❓ What is the structure of our dataset?\n",
-    "- How many records and features does it contain?\n",
-    "- Are there missing values?"
+    "# 📥 Importing and Exploring the Dataset  \n",
+    "\n",
+    "## **🔍 Purpose of This Step**  \n",
+    "Before conducting any analysis, we need to **load the dataset and examine its structure** to ensure data quality and readiness for further processing.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **📌 What Are We Doing in This Step?**  \n",
+    "✔ **Loading the dataset** → Importing the lung cancer dataset for analysis.  \n",
+    "✔ **Checking for missing values** → Identifying any data gaps that may require handling.  \n",
+    "✔ **Displaying sample records** → Reviewing the first few rows to understand data structure.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **📊 Why is This Important?**  \n",
+    "- **Missing values** can affect statistical tests and predictive models.  \n",
+    "- **Understanding column names and data types** helps us determine the necessary preprocessing steps.  \n",
+    "- This step provides an **initial overview of the dataset** before performing **data cleaning, transformation, and visualization**.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **📌 Next Steps**  \n",
+    "✅ **Handle missing values** → Decide whether to drop or impute missing data.  \n",
+    "✅ **Convert categorical variables into numerical format** → Prepare data for statistical analysis.  \n",
+    "✅ **Perform exploratory data analysis (EDA)** → Identify trends and correlations.  \n",
+    "\n",
+    "By first understanding the dataset, we ensure that the subsequent analysis is built on a **solid foundation of clean and structured data.** 🚀  \n"
    ]
   },
   {
@@ -273,13 +353,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning & Preparing for Correlation Analysis\n",
-    "❓ How can we prepare the dataset for numerical analysis?\n",
+    "## 🛠 Data Cleaning and Preparation  \n",
     "\n",
-    "- Remove rows with missing values.\n",
-    "- Create an age group column for binning the data for easier analysis.\n",
-    "- Convert categorical variables into numerical values.\n",
-    "- Remove non-numeric columns for correlation analysis."
+    "### ❓ How do we ensure data quality before analysis?  \n",
+    "- Are there **missing values** in the dataset, and how do we handle them?  \n",
+    "- Why do we need to **categorize age into groups** instead of using continuous values?  \n",
+    "- Why is it important to **convert categorical variables (e.g., Pulmonary Disease) into numeric format** for analysis?  \n",
+    "\n",
+    "### 🔍 Data Cleaning Steps  \n",
+    "1. **Handling Missing Values:**  \n",
+    "   - **Dropped all rows** with missing values to ensure a clean dataset.  \n",
+    "   - Alternative approaches (e.g., **imputation**) could be used, but dropping is simpler if missing data is minimal.  \n",
+    "\n",
+    "2. **Categorizing Age into Groups:**  \n",
+    "   - Binned age into **10-year intervals** (`0-10`, `11-20`, ..., `91-100`).  \n",
+    "   - Helps in **trend analysis** across different age ranges instead of using raw age values.  \n",
+    "\n",
+    "3. **Converting Pulmonary Disease to Numeric:**  \n",
+    "   - Transformed **'Yes' → 1** and **'No' → 0** for easier numerical analysis.  \n",
+    "   - This step is **crucial for machine learning models** and statistical tests.  \n",
+    "\n",
+    "4. **Creating a Numeric-Only DataFrame:**  \n",
+    "   - Retained only **numerical columns**, making it easier for **correlation analysis and modeling**.  \n",
+    "\n",
+    "### 📌 Observations & Next Steps  \n",
+    "- How does the **distribution of missing values** affect the dataset? Would **imputation** be a better approach?  \n",
+    "- Does categorizing age improve **interpretability**, or would keeping it continuous be more useful?  \n",
+    "- Is there any **data imbalance** in the Pulmonary Disease column after conversion?  \n",
+    "- Now that the dataset is cleaned, we can move on to **exploratory data analysis (EDA)** and **statistical testing**.  \n",
+    "\n",
+    "This data cleaning step ensures that the dataset is **well-structured, ready for analysis, and compatible with numerical methods.**  \n"
    ]
   },
   {
@@ -503,6 +606,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Age Group Analysis  \n",
+    "\n",
+    "### ❓ How does age influence the likelihood of developing pulmonary disease?  \n",
+    "- Are **older individuals more likely** to develop pulmonary disease compared to younger groups?  \n",
+    "- Do we see **a significant increase in cases** in certain age brackets?  \n",
+    "- Are there **specific age groups** that require more medical screening and intervention?  \n",
+    "\n",
+    "### 🔍 Visualization Details  \n",
+    "This bar chart shows the **distribution of pulmonary disease cases** across different **age groups**.  \n",
+    "- **X-axis:** Age groups (binned into 10-year intervals).  \n",
+    "- **Y-axis:** Number of cases per age group.  \n",
+    "- **Color coding:** Represents presence or absence of pulmonary disease.  \n",
+    "\n",
+    "### 📌 Observations to Look For  \n",
+    "- Are there **clear trends** in disease frequency across age groups?  \n",
+    "- Does the **older population** show a **higher** number of cases?  \n",
+    "- Are there any **unexpected outliers** or unusual patterns?  \n",
+    "\n",
+    "Below the visualization, a summary table prints the **exact distribution of cases per age group** for deeper analysis.  \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -591,6 +720,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Pulmonary Disease Distribution  \n",
+    "\n",
+    "### ❓ What is the overall prevalence of pulmonary disease in the dataset?  \n",
+    "- How many individuals in the dataset **have been diagnosed** with pulmonary disease versus those who haven’t?  \n",
+    "- Is the dataset **balanced or imbalanced** in terms of disease cases?  \n",
+    "- Could an **imbalance in data** impact predictive modeling if we train a machine learning model?  \n",
+    "\n",
+    "### 🔍 Visualization Details  \n",
+    "This bar chart displays the **overall distribution of pulmonary disease cases**:  \n",
+    "- **X-axis:** Indicates whether an individual has **pulmonary disease (`Yes`) or not (`No`)**.  \n",
+    "- **Y-axis:** Represents the **frequency (count) of individuals** in each category.  \n",
+    "- **Color coding:** Differentiates between the two categories.  \n",
+    "- **Labels on bars:** Show exact count values for better interpretation.  \n",
+    "\n",
+    "### 📌 Observations to Look For  \n",
+    "- Does the dataset show a **significant difference** between diseased and non-diseased individuals?  \n",
+    "- If the number of non-diseased individuals is **much higher**, how could this affect predictive modeling?  \n",
+    "- If the majority of individuals **do not have** pulmonary disease, do we need **sampling techniques** (e.g., oversampling, undersampling) to balance the data?  \n",
+    "\n",
+    "This analysis helps determine **data distribution** and whether further adjustments are needed before performing statistical tests or building predictive models.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -638,6 +793,33 @@
     "\n",
     "# Show plot\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Pulmonary Disease Distribution by Gender  \n",
+    "\n",
+    "### ❓ Does gender influence the likelihood of having pulmonary disease?  \n",
+    "- Are **males or females more affected** by pulmonary disease?  \n",
+    "- Is there a **notable difference** in the number of cases between genders?  \n",
+    "- Could **gender-specific risk factors** (e.g., smoking, occupational hazards) contribute to differences in disease prevalence?  \n",
+    "\n",
+    "### 🔍 Visualization Details  \n",
+    "This bar chart compares **pulmonary disease cases** across gender groups:  \n",
+    "- **X-axis:** Indicates **pulmonary disease status** (`No` vs. `Yes`).  \n",
+    "- **Y-axis:** Represents the **count of individuals** in each category.  \n",
+    "- **Hue (Color coding):** Differentiates between **males and females**.  \n",
+    "- **Legend:** Clearly labels gender groups for reference.  \n",
+    "- **Labels on bars:** Display exact counts for better analysis.  \n",
+    "\n",
+    "### 📌 Observations to Look For  \n",
+    "- Is one gender significantly more affected than the other?  \n",
+    "- If there is a **large difference**, could it be due to **biological factors or lifestyle choices**?  \n",
+    "- Would additional data (e.g., **smoking habits, pollution exposure**) explain the difference?  \n",
+    "\n",
+    "This analysis provides insights into **potential gender disparities in pulmonary disease prevalence**, guiding further investigation into **lifestyle, occupational, or environmental risk factors**.  \n"
    ]
   },
   {
@@ -694,6 +876,43 @@
     "# Show plot\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Correlation Analysis of Features with Pulmonary Disease  \n",
+    "\n",
+    "### ❓ What are the strongest predictors of pulmonary disease?  \n",
+    "- Which features show the **strongest correlation** with pulmonary disease?  \n",
+    "- Do **lifestyle factors** (e.g., smoking, pollution exposure) have a strong relationship with the disease?  \n",
+    "- Are there **unexpected correlations** that warrant further investigation?  \n",
+    "\n",
+    "### 🔍 Visualization Details  \n",
+    "This analysis consists of two parts:  \n",
+    "1. **Correlation Bar Chart:**  \n",
+    "   - **X-axis:** Features in the dataset.  \n",
+    "   - **Y-axis:** Correlation coefficient (ranges from -1 to 1).  \n",
+    "   - **Bars:** Represent how strongly each feature correlates with pulmonary disease.  \n",
+    "   - **Positive values:** Features **increase** the likelihood of disease.  \n",
+    "   - **Negative values:** Features **reduce** the likelihood of disease.  \n",
+    "\n",
+    "2. **Heatmap of Correlations:**  \n",
+    "   - Displays **pairwise correlations** between all numerical features.  \n",
+    "   - Helps detect **multicollinearity** (features that are strongly correlated with each other).  \n",
+    "\n",
+    "### 📌 Observations to Look For  \n",
+    "- **Which features have the highest positive correlation** with pulmonary disease?  \n",
+    "- Are any features **strongly correlated with each other**, indicating potential **redundancy**?  \n",
+    "- If certain factors (e.g., **oxygen saturation, long-term illness, exposure to pollution**) show high correlation, should we focus on these for **predictive modeling**?  \n",
+    "\n",
+    "### 🧪 Possible Next Steps  \n",
+    "- Use this analysis to **select the most relevant features** for machine learning models.  \n",
+    "- Investigate whether **highly correlated variables** should be combined or removed to avoid redundancy.  \n",
+    "- Perform **hypothesis testing** (e.g., regression analysis) to determine the **statistical significance** of these correlations.  \n",
+    "\n",
+    "This correlation analysis provides key insights into the **risk factors of pulmonary disease**, guiding further research and predictive modeling.  \n"
    ]
   },
   {
@@ -783,6 +1002,38 @@
     "\n",
     "# Usage\n",
     "plot_correlations(df_numeric, 'PULMONARY_DISEASE')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Proportion of Lung Cancer Patients Among Smokers and Non-Smokers  \n",
+    "\n",
+    "### ❓ How does smoking influence the likelihood of developing pulmonary disease?  \n",
+    "- Do smokers have a **higher percentage** of pulmonary disease cases compared to non-smokers?  \n",
+    "- What proportion of **non-smokers** also develop pulmonary disease?  \n",
+    "- Could **other factors** (e.g., pollution exposure, genetic history) contribute to cases among non-smokers?  \n",
+    "\n",
+    "### 🔍 Visualization Details  \n",
+    "This bar chart shows the **percentage of individuals with and without pulmonary disease**, grouped by **smoking status**:  \n",
+    "- **X-axis:** Smoking status (**Non-Smoker vs. Smoker**).  \n",
+    "- **Y-axis:** Proportion of individuals (%) in each group.  \n",
+    "- **Bars:** Represent the **percentage of lung disease cases** within each group.  \n",
+    "- **Color coding:** Differentiates between individuals **with and without pulmonary disease**.  \n",
+    "- **Labels on bars:** Display exact proportions to improve interpretability.  \n",
+    "\n",
+    "### 📌 Observations to Look For  \n",
+    "- Does the **smoking group** have a significantly higher proportion of lung disease cases?  \n",
+    "- Are there **non-smokers** who develop pulmonary disease, indicating **other risk factors**?  \n",
+    "- If the difference is large, how can this information be used for **public health policies** and **preventative measures**?  \n",
+    "\n",
+    "### 🧪 Possible Next Steps  \n",
+    "- Perform a **Chi-Square Test** to confirm whether the relationship between **smoking and lung disease** is statistically significant.  \n",
+    "- Consider other **confounding variables** (e.g., **air pollution, occupational hazards, genetic predisposition**).  \n",
+    "- Use this insight for **predictive modeling**, where smoking status could be a **key feature** in lung disease risk assessment.  \n",
+    "\n",
+    "This analysis provides **crucial insights** into the relationship between **smoking and pulmonary disease**, helping guide **health policies and preventative strategies**.  \n"
    ]
   },
   {
