remove outdated model files and update paths in notebook for model saving

--- a/Lung Cancer Prediction & Analysis/lung_cancer_models.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "['scaler.pkl']"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['xgboost_model.pkl']"
+       "['../Assets/Models/xgboost_model.pkl']"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,15 +144,15 @@
     "\n",
     "\n",
     "# ✅ Save All Models\n",
-    "joblib.dump(log_model, 'logistic_regression.pkl')\n",
-    "joblib.dump(rf_model, 'random_forest.pkl')\n",
-    "joblib.dump(svm_model, 'svm_model.pkl')\n",
-    "joblib.dump(xgb_model, 'xgboost_model.pkl')\n"
+    "joblib.dump(log_model, '../Assets/Models/logistic_regression.pkl')\n",
+    "joblib.dump(rf_model, '../Assets/Models/random_forest.pkl')\n",
+    "joblib.dump(svm_model, '../Assets/Models/svm_model.pkl')\n",
+    "joblib.dump(xgb_model, '../Assets/Models/xgboost_model.pkl')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
