--- a/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -146,193 +146,29 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>GENDER</th>\n",
-       "      <th>SMOKING</th>\n",
-       "      <th>FINGER_DISCOLORATION</th>\n",
-       "      <th>MENTAL_STRESS</th>\n",
-       "      <th>EXPOSURE_TO_POLLUTION</th>\n",
-       "      <th>LONG_TERM_ILLNESS</th>\n",
-       "      <th>ENERGY_LEVEL</th>\n",
-       "      <th>IMMUNE_WEAKNESS</th>\n",
-       "      <th>BREATHING_ISSUE</th>\n",
-       "      <th>ALCOHOL_CONSUMPTION</th>\n",
-       "      <th>THROAT_DISCOMFORT</th>\n",
-       "      <th>OXYGEN_SATURATION</th>\n",
-       "      <th>CHEST_TIGHTNESS</th>\n",
-       "      <th>FAMILY_HISTORY</th>\n",
-       "      <th>SMOKING_FAMILY_HISTORY</th>\n",
-       "      <th>STRESS_IMMUNE</th>\n",
-       "      <th>PULMONARY_DISEASE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>57.831178</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>95.977287</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>81</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>47.694835</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>97.184483</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>YES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>58</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59.577435</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>94.974939</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>44</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59.785767</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>95.187900</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>YES</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>72</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>59.733941</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>93.503008</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>YES</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   AGE  GENDER  SMOKING  FINGER_DISCOLORATION  MENTAL_STRESS  \\\n",
-       "0   68       1        1                     1              1   \n",
-       "1   81       1        1                     0              0   \n",
-       "2   58       1        1                     0              0   \n",
-       "3   44       0        1                     0              1   \n",
-       "4   72       0        1                     1              1   \n",
-       "\n",
-       "   EXPOSURE_TO_POLLUTION  LONG_TERM_ILLNESS  ENERGY_LEVEL  IMMUNE_WEAKNESS  \\\n",
-       "0                      1                  0     57.831178                0   \n",
-       "1                      1                  1     47.694835                1   \n",
-       "2                      0                  0     59.577435                0   \n",
-       "3                      1                  0     59.785767                0   \n",
-       "4                      1                  1     59.733941                0   \n",
-       "\n",
-       "   BREATHING_ISSUE  ALCOHOL_CONSUMPTION  THROAT_DISCOMFORT  OXYGEN_SATURATION  \\\n",
-       "0                0                    1                  1          95.977287   \n",
-       "1                1                    0                  1          97.184483   \n",
-       "2                1                    1                  0          94.974939   \n",
-       "3                1                    0                  1          95.187900   \n",
-       "4                1                    0                  1          93.503008   \n",
-       "\n",
-       "   CHEST_TIGHTNESS  FAMILY_HISTORY  SMOKING_FAMILY_HISTORY  STRESS_IMMUNE  \\\n",
-       "0                1               0                       0              0   \n",
-       "1                0               0                       0              0   \n",
-       "2                0               0                       0              0   \n",
-       "3                0               0                       0              0   \n",
-       "4                0               0                       0              0   \n",
-       "\n",
-       "  PULMONARY_DISEASE  \n",
-       "0                NO  \n",
-       "1               YES  \n",
-       "2                NO  \n",
-       "3               YES  \n",
-       "4               YES  "
+       "AGE                         int64\n",
+       "GENDER                      int64\n",
+       "SMOKING                     int64\n",
+       "FINGER_DISCOLORATION        int64\n",
+       "MENTAL_STRESS               int64\n",
+       "EXPOSURE_TO_POLLUTION       int64\n",
+       "LONG_TERM_ILLNESS           int64\n",
+       "ENERGY_LEVEL              float64\n",
+       "IMMUNE_WEAKNESS             int64\n",
+       "BREATHING_ISSUE             int64\n",
+       "ALCOHOL_CONSUMPTION         int64\n",
+       "THROAT_DISCOMFORT           int64\n",
+       "OXYGEN_SATURATION         float64\n",
+       "CHEST_TIGHTNESS             int64\n",
+       "FAMILY_HISTORY              int64\n",
+       "SMOKING_FAMILY_HISTORY      int64\n",
+       "STRESS_IMMUNE               int64\n",
+       "PULMONARY_DISEASE          object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +181,7 @@
     "print(df.isnull().sum())\n",
     "\n",
     "# Display the first few records of the dataset\n",
-    "df.head()"
+    "df.dtypes"
    ]
   },
   {
@@ -386,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +413,7 @@
        "4                  1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1100,6 +936,46 @@
     "\n",
     "# Show plot\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Chi-Square Test Results:\n",
+      "🔹 Chi-Square Statistic: 1062.77\n",
+      "🔹 Degrees of Freedom: 1\n",
+      "🔹 P-Value: 0.00000\n",
+      "🚨 **Statistically Significant!** There is a strong association between smoking and pulmonary disease.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "# ✅ Step 1: Create a contingency table\n",
+    "contingency_table = pd.crosstab(df['SMOKING'], df['PULMONARY_DISEASE'])\n",
+    "\n",
+    "# ✅ Step 2: Perform Chi-Square test\n",
+    "chi2, p, dof, expected = stats.chi2_contingency(contingency_table)\n",
+    "\n",
+    "# ✅ Step 3: Print results\n",
+    "print(\"📊 Chi-Square Test Results:\")\n",
+    "print(f\"🔹 Chi-Square Statistic: {chi2:.2f}\")\n",
+    "print(f\"🔹 Degrees of Freedom: {dof}\")\n",
+    "print(f\"🔹 P-Value: {p:.5f}\")\n",
+    "\n",
+    "# ✅ Step 4: Interpretation\n",
+    "alpha = 0.05\n",
+    "if p < alpha:\n",
+    "    print(\"🚨 **Statistically Significant!** There is a strong association between smoking and pulmonary disease.\")\n",
+    "else:\n",
+    "    print(\"✅ **Not Significant.** No strong evidence of an association between smoking and pulmonary disease.\")\n"
    ]
   }
  ],
