Model Evaluation & Deployment Preparation
Evaluated multiple machine learning models for lung disease prediction.
Logistic Regression outperformed others in accuracy and AUC score.
Compared accuracy, precision, recall, and ROC curves across models.
Selected Logistic Regression for deployment due to efficiency and interpretability.
Prepared the model for real-time prediction in the Flask API.
	modified:   Assets/Models/svm_model.pkl
	modified:   Lung Cancer Prediction & Analysis/app.py
	modified:   Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
	modified:   Lung Cancer Prediction & Analysis/lung_cancer_models.ipynb

--- a/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
@@ -85,28 +85,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📥 Importing and Exploring the Dataset  \n",
+    "## 📥 Importing and Exploring the Dataset  \n",
     "\n",
-    "## **🔍 Purpose of This Step**  \n",
+    "### **🔍 Purpose of This Step**  \n",
     "Before conducting any analysis, we need to **load the dataset and examine its structure** to ensure data quality and readiness for further processing.  \n",
     "\n",
     "---\n",
     "\n",
-    "## **📌 What Are We Doing in This Step?**  \n",
+    "### **📌 What Are We Doing in This Step?**  \n",
     "✔ **Loading the dataset** → Importing the lung cancer dataset for analysis.  \n",
     "✔ **Checking for missing values** → Identifying any data gaps that may require handling.  \n",
     "✔ **Displaying sample records** → Reviewing the first few rows to understand data structure.  \n",
     "\n",
     "---\n",
     "\n",
-    "## **📊 Why is This Important?**  \n",
+    "### **📊 Why is This Important?**  \n",
     "- **Missing values** can affect statistical tests and predictive models.  \n",
     "- **Understanding column names and data types** helps us determine the necessary preprocessing steps.  \n",
     "- This step provides an **initial overview of the dataset** before performing **data cleaning, transformation, and visualization**.  \n",
     "\n",
     "---\n",
     "\n",
-    "## **📌 Next Steps**  \n",
+    "### **📌 Next Steps**  \n",
     "✅ **Handle missing values** → Decide whether to drop or impute missing data.  \n",
     "✅ **Convert categorical variables into numerical format** → Prepare data for statistical analysis.  \n",
     "✅ **Perform exploratory data analysis (EDA)** → Identify trends and correlations.  \n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
