--- a/Lung Cancer Prediction & Analysis/lung_cancer_models.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 467,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load dataset\n",
-    "df = pd.read_csv('../Assets/Data/Lung Cancer Dataset.csv')\n",
-    "\n"
+    "## 📂 Loading and Preparing the Dataset\n",
+    "#### **🔍 Purpose of This Step**\n",
+    "Before building our model, we need to load, clean, and preprocess the dataset to ensure accuracy and consistency.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Key Steps in This Process**\n",
+    "- Loading the dataset → Importing the lung cancer dataset for analysis.\n",
+    "- Removing missing values → Ensuring data completeness for reliable predictions.\n",
+    "- Converting categorical values → Standardizing PULMONARY_DISEASE into numerical format.\n",
+    "- Checking categorical features → Identifying unique values to determine if further encoding is needed.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📊 Why Is This Important?**\n",
+    "- Missing data can lead to biased or inaccurate results.\n",
+    "- Standardized numerical values ensure compatibility with machine learning models.\n",
+    "- Understanding categorical features helps in selecting the right data transformations.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Next Steps**\n",
+    "- Encode categorical variables → Convert them into machine-readable format.\n",
+    "- Scale numerical features → Normalize data for better model performance.\n",
+    "-  Perform exploratory data analysis (EDA) → Identify patterns and relationships.\n",
+    "\n",
+    "By preparing the dataset properly, we create a strong foundation for accurate predictions. 🚀"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +74,8 @@
     }
    ],
    "source": [
-    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv('../Assets/Data/Lung Cancer Dataset.csv')\n",
     "\n",
     "# Remove rows with missing values\n",
     "df = df.dropna()\n",
@@ -61,19 +84,54 @@
     "if 'PULMONARY_DISEASE' in df.columns:\n",
     "    df['PULMONARY_DISEASE'] = df['PULMONARY_DISEASE'].map({'No': 0, 'Yes': 1, 'YES': 1, 'NO': 0}).fillna(0).astype(int)\n",
     "\n",
-    "# ✅ Check if encoding is needed\n",
+    "# Check if encoding is needed\n",
     "categorical_cols = ['GENDER', 'SMOKING', 'EXPOSURE_TO_POLLUTION', 'LONG_TERM_ILLNESS', \n",
     "                    'FAMILY_HISTORY', 'SMOKING_FAMILY_HISTORY', 'ALCOHOL_CONSUMPTION']\n",
     "\n",
     "for col in categorical_cols:\n",
     "    print(f\"🔹 {col} Unique Values: {df[col].unique()}\")  # Check if encoding is necessary\n",
     "\n",
-    "# 🚀 No encoding needed if all values are already numeric!\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔄 Preparing Data for Model Training\n",
+    "\n",
+    "\n",
+    "#### **🔍 Purpose of This Step**\n",
+    "Before training our machine learning models, we need to select relevant features, split the dataset, and scale numerical values to ensure optimal performance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Key Steps in This Process**\n",
+    "- Feature selection → Excluding PULMONARY_DISEASE as the target variable and removing GENDER to prevent bias.\n",
+    "- Train-test split → Dividing the dataset (80% training, 20% testing) while maintaining class balance through stratification.\n",
+    "- Scaling numerical features → Applying StandardScaler to ensure consistency across different numerical ranges.\n",
+    "- Saving the scaler → Preserving it for future use in model predictions.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📊 Why Is This Important?**\n",
+    "Stratified splitting prevents class imbalances from affecting model performance.\n",
+    "Feature scaling ensures that models relying on distance-based calculations (e.g., SVM, logistic regression) work optimally.\n",
+    "Saving the scaler allows us to preprocess future data consistently.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Next Steps**\n",
+    "- Train multiple machine learning models → Compare performance across different algorithms.\n",
+    "- Evaluate model accuracy → Use metrics like precision, recall, and ROC-AUC.\n",
+    "- Fine-tune hyperparameters → Optimize models for better predictions.\n",
+    "\n",
+    "By structuring the data effectively, we set the foundation for robust and unbiased predictions. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [
     {
@@ -92,51 +150,83 @@
     }
    ],
    "source": [
-    "# ✅ Select features (excluding 'PULMONARY_DISEASE' as target and 'GENDER' to remove bias)\n",
+    "# Select features (excluding 'PULMONARY_DISEASE' as target and 'GENDER' to remove bias)\n",
     "X = df.drop(columns=['PULMONARY_DISEASE', 'GENDER'])\n",
     "y = df['PULMONARY_DISEASE']\n",
     "\n",
-    "# ✅ Split dataset into training and testing sets (80%-20%) with stratification\n",
+    "#  Split dataset into training and testing sets (80%-20%) with stratification\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")\n",
     "\n",
-    "# ✅ Define numerical columns to scale\n",
+    "#  Define numerical columns to scale\n",
     "numerical_cols = ['AGE', 'OXYGEN_SATURATION', 'ENERGY_LEVEL', 'STRESS_IMMUNE']\n",
     "\n",
-    "# ✅ Apply StandardScaler only to numerical features\n",
+    "#  Apply StandardScaler only to numerical features\n",
     "scaler = StandardScaler()\n",
     "\n",
     "X_train[numerical_cols] = scaler.fit_transform(X_train[numerical_cols])\n",
     "X_test[numerical_cols] = scaler.transform(X_test[numerical_cols])\n",
     "\n",
-    "# ✅ Save the scaler for future use in predictions\n",
+    "#  Save the scaler for future use in predictions\n",
     "joblib.dump(scaler, '../Assets/Models/scaler.pkl')\n",
     "\n",
-    "# ✅ Display summary to verify changes\n",
+    "#  Display summary to verify changes\n",
     "print(f\"Training set size: {X_train.shape}, Testing set size: {X_test.shape}\")\n",
     "print(f\"Scaled Features Sample:\\n{X_train[numerical_cols].head()}\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🚀 Training and Saving Machine Learning Models\n",
+    "#### **🔍 Purpose of This Step**\n",
+    "We train multiple machine learning models with optimized hyperparameters to predict lung disease risk and save them for future use.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Key Steps in This Process**\n",
+    "- Defining models → Using optimized settings for Logistic Regression, Random Forest, SVM, and XGBoost.\n",
+    "- Training each model → Learning from the training dataset to make accurate predictions.\n",
+    "- Saving trained models → Storing them for future predictions and deployment.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📊 Why Is This Important?**\n",
+    "- Optimized hyperparameters improve model accuracy and performance.\n",
+    "- Training multiple models allows us to compare and select the best-performing one.\n",
+    "- Saving models ensures we can reuse them without retraining, making real-time predictions possible.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Next Steps**\n",
+    "- Evaluate model performance → Measure accuracy, precision, recall, and ROC-AUC.\n",
+    "- Select the best-performing model → Identify the most reliable predictor.\n",
+    "- Deploy the chosen model → Integrate it into a web application for real-time predictions.\n",
+    "\n",
+    "By training and saving models efficiently, we prepare for accurate and scalable predictions. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 Training Logistic Regression...\n",
-      "🔹 Training Random Forest...\n",
-      "🔹 Training SVM...\n",
-      "🔹 Training XGBoost...\n",
-      "✅ Logistic Regression model saved at: ../Assets/Models/logistic_regression.pkl\n",
-      "✅ Random Forest model saved at: ../Assets/Models/random_forest.pkl\n",
-      "✅ SVM model saved at: ../Assets/Models/svm_model.pkl\n",
-      "✅ XGBoost model saved at: ../Assets/Models/xgboost_model.pkl\n",
+      " Training Logistic Regression...\n",
+      " Training Random Forest...\n",
+      " Training SVM...\n",
+      " Training XGBoost...\n",
+      " Logistic Regression model saved at: ../Assets/Models/logistic_regression.pkl\n",
+      " Random Forest model saved at: ../Assets/Models/random_forest.pkl\n",
+      " SVM model saved at: ../Assets/Models/svm_model.pkl\n",
+      " XGBoost model saved at: ../Assets/Models/xgboost_model.pkl\n",
       "\n",
-      "🚀 All models trained and saved successfully!\n"
+      " All models trained and saved successfully!\n"
      ]
     }
    ],
@@ -152,8 +242,8 @@
     "# ✅ Train models\n",
     "trained_models = {}\n",
     "for name, model in models.items():\n",
-    "    print(f\"🔹 Training {name}...\")\n",
-    "    model.fit(X_train, y_train)  # Using improved variable names\n",
+    "    print(f\" Training {name}...\")\n",
+    "    model.fit(X_train, y_train)  \n",
     "    trained_models[name] = model\n",
     "\n",
     "# ✅ Save all trained models\n",
@@ -166,15 +256,48 @@
     "\n",
     "for name, path in model_paths.items():\n",
     "    joblib.dump(trained_models[name], path)\n",
-    "    print(f\"✅ {name} model saved at: {path}\")\n",
+    "    print(f\" {name} model saved at: {path}\")\n",
     "\n",
     "# ✅ Confirmation message\n",
-    "print(\"\\n🚀 All models trained and saved successfully!\")"
+    "print(\"\\n All models trained and saved successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Model Evaluation and Performance Comparison\n",
+    "#### **🔍 Purpose of This Step**\n",
+    "We assess the performance of all trained models to identify the most accurate predictor for lung disease risk.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Key Steps in This Process**\n",
+    "- Making predictions → Using trained models to classify test data.\n",
+    "- Evaluating performance → Measuring accuracy, precision, recall, and F1-score.\n",
+    "- Calculating AUC scores → Identifying the best model based on ROC-AUC.\n",
+    "- Visualizing ROC curves → Comparing model effectiveness in distinguishing between positive and negative cases.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📊 Why Is This Important?**\n",
+    "- Performance metrics help determine how well each model generalizes to new data.\n",
+    "- AUC-ROC analysis provides insight into how effectively models separate classes.\n",
+    "- Selecting the best model ensures higher accuracy and reliability in real-world applications.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **📌 Next Steps**\n",
+    "- Fine-tune the best model → Optimize hyperparameters for improved performance.\n",
+    "- Deploy the chosen model → Integrate it into a Flask app for real-time predictions.\n",
+    "- Monitor and improve predictions → Continuously test and refine the model with new data.\n",
+    "\n",
+    "By rigorously evaluating models, we ensure that only the most effective predictor is used for deployment. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
@@ -198,17 +321,17 @@
       "📊 AUC Score: 0.9261\n",
       "\n",
       "🔹 Random Forest Performance:\n",
-      "✅ Accuracy: 0.9060\n",
+      "✅ Accuracy: 0.9050\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.93      0.92       593\n",
-      "           1       0.89      0.88      0.88       407\n",
+      "           0       0.92      0.92      0.92       593\n",
+      "           1       0.88      0.88      0.88       407\n",
       "\n",
       "    accuracy                           0.91      1000\n",
       "   macro avg       0.90      0.90      0.90      1000\n",
-      "weighted avg       0.91      0.91      0.91      1000\n",
+      "weighted avg       0.90      0.91      0.90      1000\n",
       "\n",
-      "📊 AUC Score: 0.9174\n",
+      "📊 AUC Score: 0.9192\n",
       "\n",
       "🔹 SVM Performance:\n",
       "✅ Accuracy: 0.8780\n",
@@ -260,10 +383,10 @@
    "source": [
     "# ✅ Define models dictionary\n",
     "models = {\n",
-    "    \"Logistic Regression\": log_model,\n",
-    "    \"Random Forest\": rf_model,\n",
-    "    \"SVM\": svm_model,\n",
-    "    \"XGBoost\": xgb_model\n",
+    "    \"Logistic Regression\": trained_models[\"Logistic Regression\"],\n",
+    "    \"Random Forest\": trained_models[\"Random Forest\"],\n",
+    "    \"SVM\": trained_models[\"SVM\"],\n",
+    "    \"XGBoost\": trained_models[\"XGBoost\"]\n",
     "}\n",
     "\n",
     "# ✅ Evaluate all models\n",
@@ -273,17 +396,17 @@
     "print(\"\\n📌 Model Performance Evaluation:\\n\")\n",
     "for name, model in models.items():\n",
     "    # Make predictions\n",
-    "    y_pred = model.predict(test_features)\n",
+    "    y_pred = model.predict(X_test)\n",
     "\n",
     "    # Print evaluation metrics\n",
     "    print(f\"🔹 {name} Performance:\")\n",
-    "    print(f\"✅ Accuracy: {accuracy_score(test_target, y_pred):.4f}\")\n",
-    "    print(classification_report(test_target, y_pred))\n",
+    "    print(f\"✅ Accuracy: {accuracy_score(y_test, y_pred):.4f}\")\n",
+    "    print(classification_report(y_test, y_pred))\n",
     "\n",
     "    # Calculate AUC (if model supports probability prediction)\n",
     "    if hasattr(model, \"predict_proba\"):\n",
-    "        y_prob = model.predict_proba(test_features)[:, 1]\n",
-    "        fpr, tpr, _ = roc_curve(test_target, y_prob)\n",
+    "        y_prob = model.predict_proba(X_test)[:, 1]\n",
+    "        fpr, tpr, _ = roc_curve(y_test, y_prob)\n",
     "        roc_auc = auc(fpr, tpr)\n",
     "\n",
     "        print(f\"📊 AUC Score: {roc_auc:.4f}\\n\")\n",
